@@ -21,6 +21,7 @@
 #include "cmap.h"
 #include "hmapx.h"
 #include "ofproto.h"
+#include "ofproto-dpif-trace.h"
 #include "vlan-bitmap.h"
 #include "openvswitch/vlog.h"
 
@@ -56,6 +57,11 @@ struct mirror {
     /* Selection criteria. */
     struct hmapx srcs;          /* Contains "struct mbundle*"s. */
     struct hmapx dsts;          /* Contains "struct mbundle*"s. */
+
+    /* Filter criteria. */
+    struct miniflow *filter;
+    struct minimask *mask;
+    char *filter_str;
 
     /* This is accessed by handler threads assuming RCU protection (see
      * mirror_get()), but can be manipulated by mirror_set() without any
@@ -212,7 +218,9 @@ mirror_set(struct mbridge *mbridge, void *aux, const char *name,
            struct ofbundle **dsts, size_t n_dsts,
            unsigned long *src_vlans, struct ofbundle *out_bundle,
            uint16_t snaplen,
-           uint16_t out_vlan)
+           uint16_t out_vlan,
+           const char *filter,
+           const struct ofproto *ofproto)
 {
     struct mbundle *mbundle, *out;
     mirror_mask_t mirror_bit;
@@ -261,7 +269,8 @@ mirror_set(struct mbridge *mbridge, void *aux, const char *name,
         && vlan_bitmap_equal(vlans, src_vlans)
         && mirror->out == out
         && mirror->out_vlan == out_vlan
-        && mirror->snaplen == snaplen)
+        && mirror->snaplen == snaplen
+        && nullable_string_is_equal(mirror->filter_str, filter))
     {
         hmapx_destroy(&srcs_map);
         hmapx_destroy(&dsts_map);
@@ -284,6 +293,37 @@ mirror_set(struct mbridge *mbridge, void *aux, const char *name,
     mirror->out = out;
     mirror->out_vlan = out_vlan;
     mirror->snaplen = snaplen;
+
+    if (mirror->filter) {
+        ovsrcu_postpone(free, mirror->filter);
+        ovsrcu_postpone(free, mirror->mask);
+        free(mirror->filter_str);
+        mirror->filter_str = NULL;
+        mirror->filter = NULL;
+        mirror->mask = NULL;
+    }
+    if (filter) {
+        struct ofputil_port_map map = OFPUTIL_PORT_MAP_INITIALIZER(&map);
+        struct flow_wildcards wc;
+        struct flow flow;
+        char *err;
+
+        ofproto_append_ports_to_map(&map, ofproto->ports);
+        err = parse_ofp_exact_flow(&flow, &wc,
+                                   ofproto_get_tun_tab(ofproto),
+                                   filter, &map);
+        ofputil_port_map_destroy(&map);
+        if (err) {
+            VLOG_WARN("filter is invalid: %s", err);
+            free(err);
+            mirror_destroy(mbridge, mirror->aux);
+            return EINVAL;
+        }
+
+        mirror->mask = minimask_create(&wc);
+        mirror->filter = miniflow_create(&flow);
+        mirror->filter_str = xstrdup(filter);
+    }
 
     /* Update mbundles. */
     mirror_bit = MIRROR_MASK_C(1) << mirror->idx;
@@ -338,6 +378,15 @@ mirror_destroy(struct mbridge *mbridge, void *aux)
     unsigned long *vlans = ovsrcu_get(unsigned long *, &mirror->vlans);
     if (vlans) {
         ovsrcu_postpone(free, vlans);
+    }
+
+    if (mirror->filter) {
+        ovsrcu_postpone(free, mirror->filter);
+        ovsrcu_postpone(free, mirror->mask);
+        free(mirror->filter_str);
+        mirror->filter_str = NULL;
+        mirror->filter = NULL;
+        mirror->mask = NULL;
     }
 
     mbridge->mirrors[mirror->idx] = NULL;
@@ -411,14 +460,17 @@ mirror_update_stats(struct mbridge *mbridge, mirror_mask_t mirrors,
  * in which a 1-bit indicates that the mirror includes a particular VLAN,
  * '*dup_mirrors' receives a bitmap of mirrors whose output duplicates mirror
  * 'index', '*out' receives the output ofbundle (if any), and '*out_vlan'
- * receives the output VLAN (if any).
+ * receives the output VLAN (if any). In cases where the mirror has a filter
+ * configured and the flow matches that filter, '*wc' is modified to include
+ * that filters mask.
  *
  * Everything returned here is assumed to be RCU protected.
  */
 bool
 mirror_get(struct mbridge *mbridge, int index, const unsigned long **vlans,
            mirror_mask_t *dup_mirrors, struct ofbundle **out,
-           int *snaplen, int *out_vlan)
+           int *snaplen, int *out_vlan, struct miniflow **filter_flow,
+           struct minimask **filter_mask)
 {
     struct mirror *mirror;
 
@@ -430,6 +482,7 @@ mirror_get(struct mbridge *mbridge, int index, const unsigned long **vlans,
     if (!mirror) {
         return false;
     }
+
     /* Assume 'mirror' is RCU protected, i.e., it will not be freed until this
      * thread quiesces. */
 
@@ -438,6 +491,8 @@ mirror_get(struct mbridge *mbridge, int index, const unsigned long **vlans,
     *out = mirror->out ? mirror->out->ofbundle : NULL;
     *out_vlan = mirror->out_vlan;
     *snaplen = mirror->snaplen;
+    *filter_flow = mirror->filter;
+    *filter_mask = mirror->mask;
     return true;
 }
 
